# ai-news-podcast

./: .dockerignore  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  README.zh-CN.md  config.yaml  docker-compose.yml  feed.xml  index.html  nginx.conf  pipeline_walkthrough.md  pyproject.toml  requirements.txt  sources.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  daily.yml  prune_pages.yml  tts-benchmark.yml
.omo/run-continuation/: ses_090fd242fffeemrxp9jyMvLBec.json
asset/refs/: host_a_ref.txt  host_b_ref.txt
assets/audio_samples/: host_a_v1.txt  host_b_v1.txt  host_b_v2.txt  女1.txt  女2.txt  女生1.m4a  女生2.m4a  女生3.m4a  女生4.m4a  男1.txt  男2.txt  男生1.m4a  男生2.m4a  男生3.m4a  男生4.m4a
config/: config.yaml  config_edu.yaml  sources.yaml  sources_edu.yaml
data/: brief_2026-02-25.json  brief_2026-02-26.json  brief_2026-02-28.json  brief_2026-03-05.json  brief_2026-03-10.json  episodes.json
data/briefs/: brief_2026-06-01.json  brief_2026-06-02.json  brief_2026-06-03.json  brief_2026-06-04.json  brief_2026-06-05.json  brief_2026-06-06.json  brief_2026-06-07.json  brief_2026-06-08.json  brief_2026-06-09.json  brief_2026-06-10.json  brief_2026-06-11.json  brief_2026-06-12.json  brief_2026-06-13.json  brief_2026-06-14.json  brief_2026-06-15.json  brief_2026-06-16.json  brief_2026-06-17.json  brief_2026-06-18.json  brief_2026-06-19.json  brief_2026-06-20.json  brief_2026-06-21.json  brief_2026-06-22.json  brief_2026-06-23.json  brief_2026-06-24.json  brief_2026-06-25.json  brief_2026-06-26.json  brief_2026-06-27.json  brief_2026-06-28.json  brief_2026-06-29.json  brief_2026-06-30.json  brief_2026-07-01.json  brief_2026-07-02.json  brief_2026-07-03.json  brief_2026-07-04.json  brief_2026-07-05.json  brief_2026-07-06.json  brief_2026-07-07.json  brief_2026-07-08.json  brief_2026-07-09.json  brief_2026-07-10.json  (+14 more)
data/reports/: daily_report_2026-06-02.md  daily_report_2026-06-03.md  daily_report_2026-06-04.md  daily_report_2026-06-05.md  daily_report_2026-06-06.md  daily_report_2026-06-12.md  daily_report_2026-06-13.md  daily_report_2026-06-14.md  daily_report_2026-06-15.md  daily_report_2026-06-16.md  (+28 more)
docker/: nginx.conf
docs/: architecture.md  contributing.md  development.md  feed.xml  gha_cosyvoice2_deployment_log.md  index.html  index.md  pipeline_walkthrough.md  plan.md  tts_complete_guide.md
episodes/: 2026-06-02.html  2026-06-02.txt  2026-06-03.html  2026-06-03.txt  2026-06-04.html  2026-06-04.txt  2026-06-05.html  2026-06-05.txt  2026-06-06.html  2026-06-06.txt  2026-06-07.html  2026-06-07.txt  2026-06-08.html  2026-06-08.txt  2026-06-09.html  2026-06-09.txt  2026-06-10.html  2026-06-10.txt  2026-06-11.html  2026-06-11.txt  2026-06-12.html  2026-06-12.txt  2026-06-13.txt  2026-06-14.txt  2026-06-15.html  2026-06-15.txt  2026-06-16.html  2026-06-16.txt  2026-06-18.txt  2026-06-19.html  2026-06-19.txt  2026-06-20.txt  2026-06-21.txt  2026-06-22.html  2026-06-22.txt  2026-06-24.html  2026-06-25.html  2026-06-26.html  2026-06-27.html  2026-06-27.txt  (+31 more)
reports/: daily_report_2026-06-02.md  daily_report_2026-06-03.md  daily_report_2026-06-04.md  daily_report_2026-06-05.md  daily_report_2026-06-07.md  daily_report_2026-06-09.md  daily_report_2026-06-10.md  daily_report_2026-06-11.md  daily_report_2026-06-12.md  daily_report_2026-06-13.md  daily_report_2026-06-14.md  daily_report_2026-06-15.md  daily_report_2026-06-16.md  daily_report_2026-06-17.md  daily_report_2026-06-18.md  daily_report_2026-06-19.md  daily_report_2026-06-20.md  daily_report_2026-06-21.md  daily_report_2026-06-22.md  daily_report_2026-06-23.md  daily_report_2026-06-24.md  daily_report_2026-06-25.md  daily_report_2026-06-27.md  daily_report_2026-06-28.md  daily_report_2026-06-30.md  daily_report_2026-07-02.md  daily_report_2026-07-03.md  daily_report_2026-07-04.md  daily_report_2026-07-05.md  daily_report_2026-07-07.md  daily_report_2026-07-09.md  daily_report_2026-07-10.md  daily_report_2026-07-11.md  daily_report_2026-07-12.md  daily_report_2026-07-13.md  daily_report_2026-07-14.md  daily_report_2026-07-15.md  daily_report_2026-07-18.md  daily_report_2026-07-20.md  daily_report_2026-07-21.md  (+1 more)
scripts/: debug_formatting.py  debug_llm.py  debug_rest_llm.py  debug_tts.py  debug_v2_backend.py  debug_wavs.py  fetcher.py  generate_ref_audio.py  gha_tts_cosyvoice.py  processor.py  prune_gh_pages.py  rebuild_site.py  rebuild_tts.py  run_daily.py  scriptwriter.py  setup_cosyvoice_env.sh  tts_engine.py  verify_gemini.py
site/: feed.xml  index.html
tests/: __init__.py  conftest.py  test_cli.py  test_cli_coverage.py  test_cosyvoice_backend.py  test_daily_report.py  test_daily_report_e2e.py  test_debug_headers.py  test_fetcher.py  test_fetcher_exceptions.py  test_fetcher_html.py  test_fetcher_integration.py  test_fetcher_throttle.py  test_formatting.py  test_html_gen.py  test_list_models.py  test_llm.py  test_llm_client.py  test_loudnorm.py  test_material.py  test_pipeline_e2e.py  test_podcastwriter.py  test_podcastwriter_exceptions.py  test_podcastwriter_llm.py  test_podcastwriter_prompt.py  test_processor.py  test_processor_cluster.py  test_processor_numpy.py  test_rest_llm.py  test_run_daily_branches.py  test_run_daily_full.py  test_runner.py  test_scriptwriter.py  test_scriptwriter_exceptions.py  test_scriptwriter_llm.py  test_scriptwriter_prompt.py  test_show_notes.py  test_site_builder.py  test_text_utils.py  test_tts.py  (+8 more)
(+197 files in other folders)
