[project]
name = "ai-news-podcast"
version = "0.1.0"
description = "Daily AI news podcast generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4==4.12.3",
  "edge-tts==7.2.7",
  "feedparser==6.0.11",
  "httpx>=0.27",
  "jieba>=0.42",
  "pydub==0.25.1",
  "PyYAML==6.0.1",
  "rapidfuzz>=3.6",
  "readability-lxml>=0.8",
  "requests==2.32.3",
  "scikit-learn>=1.4",
  "tenacity>=8.2",
  "trafilatura>=1.8",
  "openai>=1.0",
]

[dependency-groups]
dev = []
