[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-news-podcast"
version = "0.1.0"
description = "Daily AI news podcast generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4==4.12.3",
  "edge-tts==7.2.7",
  "feedparser==6.0.11",
  "httpx>=0.27",
  "jieba>=0.42",
  "pydub==0.25.1",
  "PyYAML==6.0.1",
  "rapidfuzz>=3.6",
  "readability-lxml>=0.8",
  "requests==2.32.3",
  "scikit-learn>=1.4",
  "tenacity>=8.2",
  "trafilatura>=1.8",
  "openai>=1.0",
  "google-generativeai>=0.8.6",
  "google-genai>=1.64.0",
  "python-dotenv>=1.2.1",
]

[project.scripts]
podcast-daily = "ai_news_podcast.cli.run_daily:entrypoint"
podcast-report = "ai_news_podcast.cli.daily_report:entrypoint"
podcast-debug-headers = "ai_news_podcast.cli.debug_headers:entrypoint"
podcast-list-models = "ai_news_podcast.cli.list_models:entrypoint"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

# pydocstyle (D) rules are not enabled in select, so this has no effect.
# Uncomment the next line and add "D" to select if you want docstring checks.
# [tool.ruff.lint.pydocstyle]
# convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
