[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-news-podcast"
version = "0.1.0"
description = "Daily AI news podcast generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4==4.12.3",
  "feedparser==6.0.11",
  "httpx>=0.27",
  "jieba>=0.42",
  "pydub==0.25.1",
  "PyYAML==6.0.1",
  "rapidfuzz>=3.6",
  "readability-lxml>=0.8",
  "scikit-learn>=1.4",
  "tenacity>=8.2",
  "openai>=1.0",
  "python-dotenv>=1.2.1",
]

[project.scripts]
podcast-pipeline = "ai_news_podcast.cli.pipeline_run:entrypoint"
podcast-writer   = "ai_news_podcast.cli.podcast_writer:entrypoint"
podcast-tts      = "ai_news_podcast.cli.podcast_tts:entrypoint"
podcast-daily    = "ai_news_podcast.cli.run_daily:entrypoint"
podcast-publish  = "ai_news_podcast.cli.publish_episode:entrypoint"
podcast-report   = "ai_news_podcast.cli.daily_report:entrypoint"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "pre-commit>=3.0",
    "import-linter>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_news_podcast"]
artifacts = ["src/ai_news_podcast/site_builder/static/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "I",     # isort
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade (Python syntax upgrades)
    "B",     # flake8-bugbear (bug traps)
    "SIM",   # flake8-simplify (code simplification)
    "RET",   # flake8-return (return logic)
    "C4",    # flake8-comprehensions
    "RUF",   # Ruff-specific rules
    "ASYNC", # async best practices
    "N",     # pep8-naming (naming conventions)
    "C90",   # mccabe complexity
    "PL",    # Pylint
    "TRY",   # tryceratops (exception handling)
    "SLF",   # private member access
    "PERF",  # performance anti-patterns
    "PTH",   # use pathlib instead of os.path
    "PIE",   # misc simplifications
    "T20",   # no print statements (use logging)
]
ignore = [
    "E501",     # Line too long (handled by formatter)
    "S101",     # assert statements (used heavily in tests)
    "ASYNC240", # blocking pathlib in async (overly strict for CLI tools)
    "T201",     # print statements (CLI tools need user output)
    "PLC0415",  # import outside top-level (Python common optimization)
    "PLR2004",  # magic value comparison (values have context in code)
    "TRY003",   # raise vanilla args (inline messages are standard Python)
    "PLR0913",  # too many arguments (pipeline functions naturally have many params)
    "PLW0603",  # global statement (used intentionally for config setters)
    "RUF001",   # ambiguous unicode in strings (Chinese project)
    "RUF002",   # ambiguous unicode in docstrings
    "RUF003",   # ambiguous unicode in comments
    "D",        # docstring checks (not enabled, but be explicit)
]

[tool.ruff.lint.mccabe]
max-complexity = 15

# pydocstyle (D) rules are not enabled in select, so this has no effect.
# Uncomment the next line and add "D" to select if you want docstring checks.
# [tool.ruff.lint.pydocstyle]
# convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
